syntax = "proto3";

package taxonomy.model;
import "core.proto";
import "artifact.proto";
option csharp_namespace = "TTI.TTF.Taxonomy.Model";
option java_package = "org.tti.ttf.taxonomy.model";
option java_multiple_files = true;

//each collection defined in a map with the index being the symbol of the artifact for the collection.
message Taxonomy{
    TaxonomyVersion version = 1;
    map<string, taxonomy.model.core.Base> base_token_types = 2;
    map<string, taxonomy.model.core.Behavior> behaviors = 3;
    map<string, taxonomy.model.core.BehaviorGroup> behavior_groups = 4;
    map<string, taxonomy.model.core.PropertySet> property_sets = 5;
    map<string, taxonomy.model.core.TokenTemplate> token_templates = 6;
    taxonomy.model.artifact.FormulaGrammar formula_grammar = 7;
}

message TaxonomyVersion{
    string id = 1;
    string version = 2;
}

